pretext insists on dropped a file here, ignore for now

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ pavement.py
 
 # Don't track codechat config (will be generated automatically)
 codechat_config.yaml
+
+# This temporary: pretext insists on adding stuff here
+.github/workflows
