--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ output
 
 # don't track assets generated from source
 generated-assets
+**/*.pkl
 
 # don't track the executables.ptx file
 executables.ptx
